@@ -364,15 +364,15 @@ in coverage per interval:
 
 <<targetweightfile1, message=FALSE>>=
 interval.weight.file <- "interval_weights.txt"
-calculateIntervalWeights(normalDB$normal.coverage.files, interval.weight.file)
+calculateIntervalWeights(normalDB, interval.weight.file)
 @
 
-This function calculates copy number log2-ratios using all normal
-samples provided in the \Rcode{normal.coverage.files} argument.  Assuming that
-all normal samples are in general diploid, a high variance in log2-ratio
-is indicative of an interval with either common germline alterations or frequent
-artifacts; high or low copy number log2-ratios in these intervals are unlikely
-measuring somatic copy number events.  
+This function calculates copy number log2-ratios using all normal samples
+provided in the \Rcode{normalDB} argument.  Assuming that all normal samples
+are in general diploid, a high variance in log2-ratio is indicative of an
+interval with either common germline alterations or frequent artifacts; high or
+low copy number log2-ratios in these intervals are unlikely measuring somatic
+copy number events.  
 
 This \Rcode{interval.weight.file} is automatically generated by the NormalDB.R
 script described in the Quick vignette. 
